# PyroPrintTgBot

./: .env.lang  .gitignore  .rsync-exclude  Dockerfile  Makefile  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  run.py  version.txt
.github/workflows/: deploy.yml
app/bot/: __init__.py  decorators.py
app/bot/handlers/: __init__.py  chats.py
app/bot/middlewares/: __init__.py  logging.py  throttling.py
app/core/: config.py
app/db/: state.py  stats.py
app/utils/: http_exceptions.py  logger.py
app/webhooks/: handlers.py  swagger.py
deploy/: compose.service.notifier_telebot.app.prod.yml
make-scripts/: setup.cmd  setup.sh
scripts/: add_dep.py  generate_changelog_git_changelog.py  notify_telegram.py  tree_for_readme.txt  update_version.py  version.py
scripts/tools/: dev_secret_gen.py  gen_tree.py  num_code.py
